--- a/VueSarah.html
+++ b/VueSarah.html
@@ -6,18 +6,23 @@
     <title>Semantics and Version Control Activity</title>
 </head>
 <body>
-Add navigation here (but comment out this line) the pages are called "Home" "Shop" and "Contact"
+<!--Add navigation here (but comment out this line) the pages are called "Home" "Shop" and "Contact" -->
 
-1234 Main Street
-Anytown, Anystate, USA
-01010
-
-Before Submitting an Assignment:
-1. Re-read the assignment description to ensure that you have understood and completed the work and that your submission is in the proper format. Update/edit your assignment if needed.
-2. Review the assignment rubric to ensure that you have included all of the requested elements for the assignment. Update/edit your assignment if needed.
-3. Check Slack for any additional tips or comments that might help you improve your work, Update/edit your assignment if needed.
-4. Submit the assignment
-
+    <h1>Semantics and Version Control Activity</h1>
+    
+    <address>
+       1234 Main Street<br>
+        Anytown, Anystate, USA<br>
+        01010
+    </address>
+    
+    <h2>Before Submitting an Assignment:</h2>
+    <ol>
+        <li>Re-read the assignment description to ensure that you have understood and completed the work and that your submission is in the proper format. Update/edit your assignment if needed.</li>
+        <li>Review the assignment rubric to ensure that you have included all of the requested elements for the assignment. Update/edit your assignment if needed.</li>
+        <li>Check Slack for any additional tips or comments that might help you improve your work, Update/edit your assignment if needed.</li>
+        <li>Submit the assignment</li>
+    </ol>
 Clickable Links
 (555)-555-5555
 j.barnett@asu.edu
